Change Jenkins title and add logo     * Add logo to jenkins title before the hostname display.     The logo should be placed inside the userContent folder of the jenkins server.     If there is no logo file, then title will load as it is. Logo height     can be controlled with CSS #doony-logo, limit to 33px.     * Fix issue in displaying logo in jenkins title.     Tasks were displaced with the empty icons, as unwanted icons are removed. Now tasks in place, aligned.

--- a/doony.css
+++ b/doony.css
@@ -612,10 +612,6 @@ textarea {
   border-bottom: 1px solid #ccc;
 }
 
-.yui-skin-sam #top-panel img {
-  display: none;
-}
-
 .yui-skin-sam #search-box {
   font-size: 12px;
   padding: 5px 10px;
@@ -749,6 +745,10 @@ a.yuimenulabel, a.yuimenuitemlabel,
 #doony-title {
   color: #fff;
   margin: 5px 10px;
+}
+
+#doony-logo {
+  height: 33px;
 }
 
 #jenkins-home-link {
